Fix size definition of icons to keep them from being blurry. (#81)
* Fix size definition of icons to keep them from being blurry.

* Fix commented out thing.

* Empty commit to trigger rebuild

--- a/src/common/sass/widgets/_panel.scss
+++ b/src/common/sass/widgets/_panel.scss
@@ -52,7 +52,7 @@
       }
     }
     .system-status-icon {
-      icon-size: 1.16em;
+      icon-size: 16px;
       padding: 0 $tiny_padding; 
     }
     .unlock-screen #panel &,
@@ -130,5 +130,5 @@
 }
 
 .popup-menu-icon {
-  icon-size: 1.09em; 
+  icon-size: 16px; 
 }
